overflow issue with mobnav

--- a/components/blocks/Nav.module.css
+++ b/components/blocks/Nav.module.css
@@ -10,7 +10,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  overflow: hidden;
   
   @media screen and (max-width: 639px) {
     transition: none;
